@@ -3,18 +3,20 @@ package com.amex.giftcard_catalogue.utils;
 import com.amex.giftcard_catalogue.api.model.GiftCard;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.core.io.ResourceLoader;
 
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.UUID;
 
 public class TestUtils {
+
     public static final UUID GIFT_CARD_ID = UUID.fromString("cf02dd1b-33ee-4c8d-8303-f32d35b407ba");
     public static final UUID GIFT_CARD_ID_2 = UUID.fromString("9a4c59ef-e876-495e-8986-e080b88fb4ad");
     public static final UUID GIFT_CARD_ID_3 = UUID.fromString("0a91fe46-4f5f-478d-957c-2effe46aa497");
-
     public static final int VALUE = 1000;
     public static final int VALUE_2 = 35;
     public static final String COMPANY_NAME_1 = "Disney";
@@ -30,7 +32,14 @@ public class TestUtils {
                 new GiftCard(GIFT_CARD_ID_2, COMPANY_NAME_1, VALUE, 100000));
     }
 
-    private String getResourceAsString(String resourcePath) throws IOException {
-        return new String(Files.readAllBytes(Paths.get("src/test/resources/" + resourcePath)));
+    public static String loadJsonFromFile(String filePath) throws IOException {
+        try (InputStream inputStream = TestUtils.class.getResourceAsStream("/" + filePath)) {
+            if (inputStream == null) {
+                throw new RuntimeException("File not found: " + filePath);
+            }
+            return new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
+        } catch (IOException e) {
+            throw new RuntimeException("Error reading file: " + filePath, e);
+        }
     }
 }
